validatingadmissionpolicies/validatingadmissionpolicy_debug.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "deny-pod-debug-access"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["CREATE"]
      resources:   ["pods"]
  validations:
    - expression: "!object.metadata.name.contains('debug')" 
      message: "Creating debug pod is not allowed"
