validatingadmissionpolicies/validatingadmissionpolicy_terminal.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicy
metadata:
  name: "deny-terminal-access"
spec:
  failurePolicy: Fail
  matchConstraints:
    resourceRules:
    - apiGroups:   [""]
      apiVersions: ["v1"]
      operations:  ["*"]
      resources:   ["pods/exec"]
  validations:
  - expression: "object == null"
    message: "Accessing the pod terminal is not allowed"
