validatingadmissionpolicies/validatingadmissionpolicybinding_terminal.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: "deny-terminal-access-binding"
spec:
  policyName: "deny-terminal-access"
  validationActions: [Deny]
  matchResources:
    namespaceSelector:
      matchLabels:
        terminalaccess: "false"
